# nobody-cares

./: .gitignore  CHANGES_SUMMARY.md  DAILY_GUIDE.md  INDEX.md  PRIVACY_SECURITY.md  QUICKSTART.md  README.md  WALKTHROUGH_REPORT.md  WHEN_TO_LOG.md  pyproject.toml
audited/: IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  STRUCTURE_REVIEW.md  api_overview.md  learning_log.md  structure_review.md
docs/: ARCHITECTURE.md  CHANGES_SUMMARY.md  MAJOR_SHIFTS.md  README.md  SHIFTS_SUMMARY.md
src/: __init__.py
src/alpha/: __init__.py  brief_generator.py  formatter.py
src/cli/: main.py
src/core/: __init__.py  currency.py  models.py  storage.py  utils.py
src/examples/: __init__.py  library.py
src/importers/: __init__.py  base.py  trading_performance.py
src/improvements/: __init__.py  templates.py
src/insights/: __init__.py  patterns.py  reviews.py
src/outputs/: __init__.py  content.py  linkedin.py  pdf.py  twitter.py  video_script.py
src/review/: __init__.py  prompts.py
tests/: README.md  __init__.py  conftest.py  test_alpha.py  test_cli.py  test_content_generator.py  test_currency.py  test_examples.py  test_importers.py  test_models.py  test_outputs.py  test_quick_risk.py  test_review.py  test_risk_tracking.py  test_storage.py  test_utils.py
