[project]
name = "nobody-cares"
version = "0.1.0"
description = "Daily Improvement Hub - Incremental Value Builder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.8.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jinja2>=3.1.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
nc = "src.cli.main:main"
nobody-cares = "src.cli.main:main"

[tool.setuptools]
packages = ["src", "src.core", "src.cli", "src.alpha", "src.importers", "src.improvements", "src.outputs", "src.insights", "src.review", "src.examples"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

